fix(scrollbar): fix dark/light mode for scrollbar

--- a/packages/core/src/global/scrollbar-vars.scss
+++ b/packages/core/src/global/scrollbar-vars.scss
@@ -1,4 +1,5 @@
-:root {
+:root,
+.tds-mode-light {
   --tds-scrollbar-track-color: transparent;
   --tds-scrollbar-thumb-color: var(--component-scrollbar-background-thumb-default);
   --tds-scrollbar-hover-thumb-color: var(--component-scrollbar-background-thumb-hover);
